# estrutura-projeto-dados

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: continuous_integration.yml
.github/workflows/: continuous_integration.yml
app/: main.py
app/pipeline/: __init__.py  cria_csv_fake.py  extract.py  load.py  transform.py
app/utils/: __init__.py  utils.py
data/input/: absenteeism_data_0.csv  absenteeism_data_1.csv  absenteeism_data_10.csv  absenteeism_data_11.csv  absenteeism_data_12.csv  absenteeism_data_13.csv  absenteeism_data_14.csv  absenteeism_data_15.csv  absenteeism_data_16.csv  absenteeism_data_17.csv  absenteeism_data_18.csv  absenteeism_data_19.csv  absenteeism_data_2.csv  absenteeism_data_20.csv  absenteeism_data_21.csv  absenteeism_data_22.csv  absenteeism_data_23.csv  absenteeism_data_24.csv  absenteeism_data_25.csv  absenteeism_data_26.csv  absenteeism_data_27.csv  absenteeism_data_28.csv  absenteeism_data_29.csv  absenteeism_data_3.csv  absenteeism_data_30.csv  absenteeism_data_31.csv  absenteeism_data_32.csv  absenteeism_data_33.csv  absenteeism_data_34.csv  absenteeism_data_35.csv  absenteeism_data_36.csv  absenteeism_data_37.csv  absenteeism_data_38.csv  absenteeism_data_39.csv  absenteeism_data_4.csv  absenteeism_data_40.csv  absenteeism_data_41.csv  (+12 more)
docs/: index.md
exec/: pipeline-batch-absenteism.sh  test-pipeline-batch-absenteism.sh
search/: search_index.json
tests/: __init__.py  test_load.py  test_transform.py  test_utils.py
utils/: __init__.py  cria_csv_fake.py  utils.py
(+2 files in other folders)
