[tool.poetry]
name = "pacote-estrutura-projeto"
version = "0.1.0"
description = "projeto de dados com os pacotes devidamente estruturados"
authors = ["rich.oliveira <wallacerafael01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.3"
faker = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
